--- a/beet.yml
+++ b/beet.yml
@@ -38,6 +38,8 @@ pipeline:
 
 # Generic dict which holds extra information usable by plugins
 meta:
+    # List of supported Minecraft versions
+    mc_supports: ["1.21.7", "1.21.8", "1.21.9", "1.21.10", "infinite"]
 
     # StewBeet specific configuration
     stewbeet:
